Debug the errors

--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,32 +68,32 @@
     "    else:\n",
     "        a = pd.DataFrame()\n",
     "    if stock_name not in  a.columns:\n",
-    "        a[stock_name]= [str(t) for t in traded_on_holidays.index.date]\n",
+    "        a[stock_name]= pd.Series([str(t) for t in traded_on_holidays.index.date])\n",
     "\n",
     "    if os.path.exists(traded_on_weekends_file):\n",
     "        b = pd.read_csv(traded_on_weekends_file)\n",
     "    else:\n",
     "        b = pd.DataFrame()\n",
-    "    if stock_name not in  a.columns:\n",
-    "        b[stock_name]= [str(t) for t in traded_on_weekends.index.date]\n",
+    "    if stock_name not in  b.columns:\n",
+    "        b[stock_name]= pd.Series([str(t) for t in traded_on_weekends.index.date])\n",
     "\n",
     "    if os.path.exists(missing_data_file):\n",
     "        c = pd.read_csv(missing_data_file)\n",
     "    else:\n",
     "        c = pd.DataFrame()\n",
-    "    if stock_name not in  a.columns:\n",
-    "        c[stock_name]= [str(t) for t in missing_data.index.date]\n",
+    "    if stock_name not in  c.columns:\n",
+    "        c[stock_name]= pd.Series([str(t) for t in missing_data.index.date])\n",
     "\n",
-    "    # a.to_csv(traded_on_holidays_file,index=False)\n",
+    "    a.to_csv(traded_on_holidays_file,index=False)\n",
     "    b.to_csv(traded_on_weekends_file,index=False)\n",
-    "    # c.to_csv(missing_data_file,index=False)\n",
+    "    c.to_csv(missing_data_file,index=False)\n",
     "\n",
     "    return stock_df_continous\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,9 @@
    ],
    "source": [
     "nifty_daily = pd.read_csv(\"../Data/Nifty/nifty_1day.csv\")\n",
-    "nifty_daily_continous = get_missing_data_dates(\"Nifty\",nifty_daily)"
+    "nifty_daily_continous = get_missing_data_dates(\"Nifty\",nifty_daily)\n",
+    "reliance_daily = pd.read_csv(\"../Data/Reliance/reliance_1day.csv\")\n",
+    "reliance_daily_continous = get_missing_data_dates(\"Reliance\",reliance_daily)"
    ]
   },
   {
@@ -1509,7 +1511,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1523,12 +1525,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f1aba267472b7e2c6dd0919a302d141869a2c3e7309a4fea0fcdecc21b3080c4"
+    "hash": "c15956f4be0068136c95847f01cedf6db2bce55b2f9d9652bd49792eae96405d"
    }
   }
  },
