Getting indicator values using TA-Lib

--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1552,7 +1552,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>rsi</th>\n",
+       "      <th>ema</th>\n",
+       "      <th>adx</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2007-01-02</th>\n",
+       "      <td>3966.25</td>\n",
+       "      <td>4016.65</td>\n",
+       "      <td>3964.95</td>\n",
+       "      <td>4007.40</td>\n",
+       "      <td>277443911</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-03</th>\n",
+       "      <td>4007.70</td>\n",
+       "      <td>4029.80</td>\n",
+       "      <td>3985.00</td>\n",
+       "      <td>4024.05</td>\n",
+       "      <td>336972857</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-04</th>\n",
+       "      <td>4027.30</td>\n",
+       "      <td>4041.00</td>\n",
+       "      <td>3979.80</td>\n",
+       "      <td>3988.80</td>\n",
+       "      <td>369793444</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-05</th>\n",
+       "      <td>3990.15</td>\n",
+       "      <td>4011.45</td>\n",
+       "      <td>3969.65</td>\n",
+       "      <td>3983.40</td>\n",
+       "      <td>363396365</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-08</th>\n",
+       "      <td>3983.30</td>\n",
+       "      <td>3987.45</td>\n",
+       "      <td>3913.00</td>\n",
+       "      <td>3933.40</td>\n",
+       "      <td>345887697</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-01</th>\n",
+       "      <td>18130.70</td>\n",
+       "      <td>18175.80</td>\n",
+       "      <td>18060.15</td>\n",
+       "      <td>18145.40</td>\n",
+       "      <td>248784199</td>\n",
+       "      <td>69.030689</td>\n",
+       "      <td>17658.226723</td>\n",
+       "      <td>17.017707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-02</th>\n",
+       "      <td>18177.90</td>\n",
+       "      <td>18178.75</td>\n",
+       "      <td>18048.65</td>\n",
+       "      <td>18082.85</td>\n",
+       "      <td>2053916079</td>\n",
+       "      <td>66.453269</td>\n",
+       "      <td>17714.843160</td>\n",
+       "      <td>18.029645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-03</th>\n",
+       "      <td>17968.35</td>\n",
+       "      <td>18106.30</td>\n",
+       "      <td>17959.20</td>\n",
+       "      <td>18052.70</td>\n",
+       "      <td>250997227</td>\n",
+       "      <td>65.189792</td>\n",
+       "      <td>17759.890739</td>\n",
+       "      <td>18.368433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-04</th>\n",
+       "      <td>18053.40</td>\n",
+       "      <td>18135.10</td>\n",
+       "      <td>18017.15</td>\n",
+       "      <td>18117.15</td>\n",
+       "      <td>263180073</td>\n",
+       "      <td>66.649524</td>\n",
+       "      <td>17807.525307</td>\n",
+       "      <td>18.803003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-07</th>\n",
+       "      <td>18211.75</td>\n",
+       "      <td>18255.50</td>\n",
+       "      <td>18064.75</td>\n",
+       "      <td>18202.80</td>\n",
+       "      <td>309475221</td>\n",
+       "      <td>68.537716</td>\n",
+       "      <td>17860.228599</td>\n",
+       "      <td>19.687825</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3855 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                open      high       low     close      volume        rsi  \\\n",
+       "datetime                                                                    \n",
+       "2007-01-02   3966.25   4016.65   3964.95   4007.40   277443911        NaN   \n",
+       "2007-01-03   4007.70   4029.80   3985.00   4024.05   336972857        NaN   \n",
+       "2007-01-04   4027.30   4041.00   3979.80   3988.80   369793444        NaN   \n",
+       "2007-01-05   3990.15   4011.45   3969.65   3983.40   363396365        NaN   \n",
+       "2007-01-08   3983.30   3987.45   3913.00   3933.40   345887697        NaN   \n",
+       "...              ...       ...       ...       ...         ...        ...   \n",
+       "2022-11-01  18130.70  18175.80  18060.15  18145.40   248784199  69.030689   \n",
+       "2022-11-02  18177.90  18178.75  18048.65  18082.85  2053916079  66.453269   \n",
+       "2022-11-03  17968.35  18106.30  17959.20  18052.70   250997227  65.189792   \n",
+       "2022-11-04  18053.40  18135.10  18017.15  18117.15   263180073  66.649524   \n",
+       "2022-11-07  18211.75  18255.50  18064.75  18202.80   309475221  68.537716   \n",
+       "\n",
+       "                     ema        adx  \n",
+       "datetime                             \n",
+       "2007-01-02           NaN        NaN  \n",
+       "2007-01-03           NaN        NaN  \n",
+       "2007-01-04           NaN        NaN  \n",
+       "2007-01-05           NaN        NaN  \n",
+       "2007-01-08           NaN        NaN  \n",
+       "...                  ...        ...  \n",
+       "2022-11-01  17658.226723  17.017707  \n",
+       "2022-11-02  17714.843160  18.029645  \n",
+       "2022-11-03  17759.890739  18.368433  \n",
+       "2022-11-04  17807.525307  18.803003  \n",
+       "2022-11-07  17860.228599  19.687825  \n",
+       "\n",
+       "[3855 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indicator_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
