--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -1660,8 +1660,9 @@
     "def indicator(data):\n",
     "    stock_data = data.copy()\n",
     "    stock_data['rsi'] = abstract.RSI(data, timeperiod=14)\n",
-    "    stock_data['ema'] = abstract.EMA(data, timeperiod=14)\n",
-    "    stock_data['adx'] = abstract.ADX(data, timeperiod=14)\n",
+    "    stock_data['ema'] = abstract.EMA(data, timeperiod=10)\n",
+    "    stock_data['sma'] = abstract.SMA(data, timeperiod=20)\n",
+    "    stock_data['bbands'] = abstract.BBAND(data, timeperiod=\n",
     "    return stock_data"
    ]
   },
@@ -53707,7 +53708,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -53726,7 +53727,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a9cff5a362bc38ef45d817ae74b1af54d6a076e3d773891282bce078b815ba34"
+    "hash": "a4eb17cfc315e1086e64ababfe7809be8f1c25c6da3a4a8e75049620772378dd"
    }
   }
  },
