Added indicators like rsi,sma,ema,pivot point and bollinger bands

--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1652,23 +1652,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## function to get Pivot Points, Supports and Resistances\n",
+    "def PPSR(df):  \n",
+    "    PP = pd.Series((df['high'] + df['low'] + df['close']) / 3)  # main pivot level\n",
+    "    # pivot supports level(S1, S2, S3) and resistances level(R1, R2, R3)\n",
+    "    R1 = pd.Series(2 * PP - df['low'])  \n",
+    "    S1 = pd.Series(2 * PP - df['high'])  \n",
+    "    R2 = pd.Series(PP + df['high'] - df['low'])  \n",
+    "    S2 = pd.Series(PP - df['high'] + df['low'])  \n",
+    "    R3 = pd.Series(df['high'] + 2 * (PP - df['low']))  \n",
+    "    S3 = pd.Series(df['low'] - 2 * (df['high'] - PP))  \n",
+    "    psr = {'PP':PP, 'R1':R1, 'S1':S1, 'R2':R2, 'S2':S2, 'R3':R3, 'S3':S3}  \n",
+    "    PSR = pd.DataFrame(psr)\n",
+    "    return PSR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "## function to get indicator values in dataframe\n",
     "def indicator(data):\n",
     "    stock_data = data.copy()\n",
-    "    stock_data['rsi'] = abstract.RSI(data, timeperiod=14)\n",
-    "    stock_data['ema'] = abstract.EMA(data, timeperiod=10)\n",
-    "    stock_data['sma'] = abstract.SMA(data, timeperiod=20)\n",
-    "    stock_data['bbands'] = abstract.BBAND(data, timeperiod=\n",
+    "    stock_data['rsi'] = abstract.RSI(data, timeperiod=14) # Relative Strength Index\n",
+    "    stock_data['ema'] = abstract.EMA(data, timeperiod=10) # Exponential Moving Average\n",
+    "    stock_data['sma'] = abstract.SMA(data, timeperiod=20) # Simple Moving Average\n",
+    "    stock_data['UP_BB'], stock_data['MID_BB'], stock_data['LOW_BB'] = talib.BBANDS(stock_data['close'], \\\n",
+    "        timeperiod=20, nbdevup=2, nbdevdn=2, matype=0) # Bollinger Bands of upper, middle and lower bands\n",
+    "    df = PPSR(stock_data) #calling PPSR function to get pivot points, supports and resistances\n",
+    "    stock_data = stock_data.join(df)\n",
     "    return stock_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1699,10 +1723,30 @@
        "      <th>volume</th>\n",
        "      <th>rsi</th>\n",
        "      <th>ema</th>\n",
-       "      <th>adx</th>\n",
+       "      <th>sma</th>\n",
+       "      <th>UP_BB</th>\n",
+       "      <th>MID_BB</th>\n",
+       "      <th>LOW_BB</th>\n",
+       "      <th>PP</th>\n",
+       "      <th>R1</th>\n",
+       "      <th>S1</th>\n",
+       "      <th>R2</th>\n",
+       "      <th>S2</th>\n",
+       "      <th>R3</th>\n",
+       "      <th>S3</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1724,6 +1768,16 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3996.333333</td>\n",
+       "      <td>4027.716667</td>\n",
+       "      <td>3976.016667</td>\n",
+       "      <td>4048.033333</td>\n",
+       "      <td>3944.633333</td>\n",
+       "      <td>4079.416667</td>\n",
+       "      <td>3924.316667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2007-01-03</th>\n",
@@ -1735,6 +1789,16 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4012.950000</td>\n",
+       "      <td>4040.900000</td>\n",
+       "      <td>3996.100000</td>\n",
+       "      <td>4057.750000</td>\n",
+       "      <td>3968.150000</td>\n",
+       "      <td>4085.700000</td>\n",
+       "      <td>3951.300000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2007-01-04</th>\n",
@@ -1746,6 +1810,16 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4003.200000</td>\n",
+       "      <td>4026.600000</td>\n",
+       "      <td>3965.400000</td>\n",
+       "      <td>4064.400000</td>\n",
+       "      <td>3942.000000</td>\n",
+       "      <td>4087.800000</td>\n",
+       "      <td>3904.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2007-01-05</th>\n",
@@ -1757,6 +1831,16 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3988.166667</td>\n",
+       "      <td>4006.683333</td>\n",
+       "      <td>3964.883333</td>\n",
+       "      <td>4029.966667</td>\n",
+       "      <td>3946.366667</td>\n",
+       "      <td>4048.483333</td>\n",
+       "      <td>3923.083333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2007-01-08</th>\n",
@@ -1768,9 +1852,29 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3944.616667</td>\n",
+       "      <td>3976.233333</td>\n",
+       "      <td>3901.783333</td>\n",
+       "      <td>4019.066667</td>\n",
+       "      <td>3870.166667</td>\n",
+       "      <td>4050.683333</td>\n",
+       "      <td>3827.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1788,8 +1892,18 @@
        "      <td>18145.40</td>\n",
        "      <td>248784199</td>\n",
        "      <td>69.030689</td>\n",
-       "      <td>17658.226723</td>\n",
-       "      <td>17.017707</td>\n",
+       "      <td>17744.327157</td>\n",
+       "      <td>17443.8000</td>\n",
+       "      <td>18103.573882</td>\n",
+       "      <td>17443.8000</td>\n",
+       "      <td>16784.026118</td>\n",
+       "      <td>18127.116667</td>\n",
+       "      <td>18194.083333</td>\n",
+       "      <td>18078.433333</td>\n",
+       "      <td>18242.766667</td>\n",
+       "      <td>18011.466667</td>\n",
+       "      <td>18309.733333</td>\n",
+       "      <td>17962.783333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-11-02</th>\n",
@@ -1799,8 +1913,18 @@
        "      <td>18082.85</td>\n",
        "      <td>2053916079</td>\n",
        "      <td>66.453269</td>\n",
-       "      <td>17714.843160</td>\n",
-       "      <td>18.029645</td>\n",
+       "      <td>17805.876765</td>\n",
+       "      <td>17503.5750</td>\n",
+       "      <td>18167.471854</td>\n",
+       "      <td>17503.5750</td>\n",
+       "      <td>16839.678146</td>\n",
+       "      <td>18103.416667</td>\n",
+       "      <td>18158.183333</td>\n",
+       "      <td>18028.083333</td>\n",
+       "      <td>18233.516667</td>\n",
+       "      <td>17973.316667</td>\n",
+       "      <td>18288.283333</td>\n",
+       "      <td>17897.983333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-11-03</th>\n",
@@ -1810,8 +1934,18 @@
        "      <td>18052.70</td>\n",
        "      <td>250997227</td>\n",
        "      <td>65.189792</td>\n",
-       "      <td>17759.890739</td>\n",
-       "      <td>18.368433</td>\n",
+       "      <td>17850.753717</td>\n",
+       "      <td>17542.4950</td>\n",
+       "      <td>18238.551187</td>\n",
+       "      <td>17542.4950</td>\n",
+       "      <td>16846.438813</td>\n",
+       "      <td>18039.400000</td>\n",
+       "      <td>18119.600000</td>\n",
+       "      <td>17972.500000</td>\n",
+       "      <td>18186.500000</td>\n",
+       "      <td>17892.300000</td>\n",
+       "      <td>18266.700000</td>\n",
+       "      <td>17825.400000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-11-04</th>\n",
@@ -1821,8 +1955,18 @@
        "      <td>18117.15</td>\n",
        "      <td>263180073</td>\n",
        "      <td>66.649524</td>\n",
-       "      <td>17807.525307</td>\n",
-       "      <td>18.803003</td>\n",
+       "      <td>17899.189405</td>\n",
+       "      <td>17581.7625</td>\n",
+       "      <td>18313.536827</td>\n",
+       "      <td>17581.7625</td>\n",
+       "      <td>16849.988173</td>\n",
+       "      <td>18089.800000</td>\n",
+       "      <td>18162.450000</td>\n",
+       "      <td>18044.500000</td>\n",
+       "      <td>18207.750000</td>\n",
+       "      <td>17971.850000</td>\n",
+       "      <td>18280.400000</td>\n",
+       "      <td>17926.550000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-11-07</th>\n",
@@ -1832,12 +1976,22 @@
        "      <td>18202.80</td>\n",
        "      <td>309475221</td>\n",
        "      <td>68.537716</td>\n",
-       "      <td>17860.228599</td>\n",
-       "      <td>19.687825</td>\n",
+       "      <td>17954.391331</td>\n",
+       "      <td>17626.1700</td>\n",
+       "      <td>18394.592579</td>\n",
+       "      <td>17626.1700</td>\n",
+       "      <td>16857.747421</td>\n",
+       "      <td>18174.350000</td>\n",
+       "      <td>18283.950000</td>\n",
+       "      <td>18093.200000</td>\n",
+       "      <td>18365.100000</td>\n",
+       "      <td>17983.600000</td>\n",
+       "      <td>18474.700000</td>\n",
+       "      <td>17902.450000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3855 rows × 8 columns</p>\n",
+       "<p>3855 rows × 18 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1855,24 +2009,52 @@
        "2022-11-04  18053.40  18135.10  18017.15  18117.15   263180073  66.649524   \n",
        "2022-11-07  18211.75  18255.50  18064.75  18202.80   309475221  68.537716   \n",
        "\n",
-       "                     ema        adx  \n",
-       "datetime                             \n",
-       "2007-01-02           NaN        NaN  \n",
-       "2007-01-03           NaN        NaN  \n",
-       "2007-01-04           NaN        NaN  \n",
-       "2007-01-05           NaN        NaN  \n",
-       "2007-01-08           NaN        NaN  \n",
-       "...                  ...        ...  \n",
-       "2022-11-01  17658.226723  17.017707  \n",
-       "2022-11-02  17714.843160  18.029645  \n",
-       "2022-11-03  17759.890739  18.368433  \n",
-       "2022-11-04  17807.525307  18.803003  \n",
-       "2022-11-07  17860.228599  19.687825  \n",
+       "                     ema         sma         UP_BB      MID_BB        LOW_BB  \\\n",
+       "datetime                                                                       \n",
+       "2007-01-02           NaN         NaN           NaN         NaN           NaN   \n",
+       "2007-01-03           NaN         NaN           NaN         NaN           NaN   \n",
+       "2007-01-04           NaN         NaN           NaN         NaN           NaN   \n",
+       "2007-01-05           NaN         NaN           NaN         NaN           NaN   \n",
+       "2007-01-08           NaN         NaN           NaN         NaN           NaN   \n",
+       "...                  ...         ...           ...         ...           ...   \n",
+       "2022-11-01  17744.327157  17443.8000  18103.573882  17443.8000  16784.026118   \n",
+       "2022-11-02  17805.876765  17503.5750  18167.471854  17503.5750  16839.678146   \n",
+       "2022-11-03  17850.753717  17542.4950  18238.551187  17542.4950  16846.438813   \n",
+       "2022-11-04  17899.189405  17581.7625  18313.536827  17581.7625  16849.988173   \n",
+       "2022-11-07  17954.391331  17626.1700  18394.592579  17626.1700  16857.747421   \n",
        "\n",
-       "[3855 rows x 8 columns]"
+       "                      PP            R1            S1            R2  \\\n",
+       "datetime                                                             \n",
+       "2007-01-02   3996.333333   4027.716667   3976.016667   4048.033333   \n",
+       "2007-01-03   4012.950000   4040.900000   3996.100000   4057.750000   \n",
+       "2007-01-04   4003.200000   4026.600000   3965.400000   4064.400000   \n",
+       "2007-01-05   3988.166667   4006.683333   3964.883333   4029.966667   \n",
+       "2007-01-08   3944.616667   3976.233333   3901.783333   4019.066667   \n",
+       "...                  ...           ...           ...           ...   \n",
+       "2022-11-01  18127.116667  18194.083333  18078.433333  18242.766667   \n",
+       "2022-11-02  18103.416667  18158.183333  18028.083333  18233.516667   \n",
+       "2022-11-03  18039.400000  18119.600000  17972.500000  18186.500000   \n",
+       "2022-11-04  18089.800000  18162.450000  18044.500000  18207.750000   \n",
+       "2022-11-07  18174.350000  18283.950000  18093.200000  18365.100000   \n",
+       "\n",
+       "                      S2            R3            S3  \n",
+       "datetime                                              \n",
+       "2007-01-02   3944.633333   4079.416667   3924.316667  \n",
+       "2007-01-03   3968.150000   4085.700000   3951.300000  \n",
+       "2007-01-04   3942.000000   4087.800000   3904.200000  \n",
+       "2007-01-05   3946.366667   4048.483333   3923.083333  \n",
+       "2007-01-08   3870.166667   4050.683333   3827.333333  \n",
+       "...                  ...           ...           ...  \n",
+       "2022-11-01  18011.466667  18309.733333  17962.783333  \n",
+       "2022-11-02  17973.316667  18288.283333  17897.983333  \n",
+       "2022-11-03  17892.300000  18266.700000  17825.400000  \n",
+       "2022-11-04  17971.850000  18280.400000  17926.550000  \n",
+       "2022-11-07  17983.600000  18474.700000  17902.450000  \n",
+       "\n",
+       "[3855 rows x 18 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
