--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1674,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1705,7 +1705,7 @@
     "    nifty_ppsr_monthly = PPSR(nifty_df_monthly) #calling PPSR function to get pivot points, supports and resistances for monthly data\n",
     "\n",
     "    # getting month and year from index but in df we will take previous month as we have to calculate pivot points for next month\n",
-    "    data['new_date'] = data.index + DateOffset(months=-1)\n",
+    "    data['new_date'] = data.index + pd.DateOffset(months=-1)\n",
     "    data['month-year'] = data['new_date'].dt.strftime('%Y-%m')\n",
     "    data = data.drop(['new_date'], axis=1)\n",
     "    nifty_ppsr_monthly['month-year'] = nifty_ppsr_monthly.index.strftime('%Y-%m')\n",
@@ -1731,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2597,7 +2597,7 @@
        "2007-02-15  4244.935098  4127.6050  4010.274902  "
       ]
      },
-     "execution_count": 217,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
