pattern recognition function is created

--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -54816,7 +54816,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Nifty Conclusion (After 1 minute adjustment)\n",
+    "# Nifty Conclusion (After 1 minute adjustment)\n",
     "Till 2009-10-22 (including)-> Trading from 09:55\n",
     "\n",
     "2009-10-23(inc) to 2009-12-31(inc) -> Trading from 09:56\n",
@@ -55200,6 +55200,313 @@
    ],
    "source": [
     "min_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pattern recognitions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pattern_recognition(df):\n",
+    "    # pattern recognition\n",
+    "    data = df.copy()\n",
+    "    data['engulfing'] = abstract.CDLENGULFING(data)\n",
+    "    data['harami'] = abstract.CDLHARAMI(data)\n",
+    "    data['hammer'] = abstract.CDLHAMMER(data)\n",
+    "    data['shooting_star'] = abstract.CDLSHOOTINGSTAR(data)\n",
+    "    data['doji'] = abstract.CDLDOJI(data)\n",
+    "    data['dragonfly_dogi'] = abstract.CDLDRAGONFLYDOJI(data)\n",
+    "    data['gravestone_dogi'] = abstract.CDLGRAVESTONEDOJI(data)\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>engulfing</th>\n",
+       "      <th>harami</th>\n",
+       "      <th>hammer</th>\n",
+       "      <th>shooting_star</th>\n",
+       "      <th>doji</th>\n",
+       "      <th>dragonfly_dogi</th>\n",
+       "      <th>gravestone_dogi</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2007-01-02</th>\n",
+       "      <td>3966.25</td>\n",
+       "      <td>4016.65</td>\n",
+       "      <td>3964.95</td>\n",
+       "      <td>4007.40</td>\n",
+       "      <td>277443911</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-03</th>\n",
+       "      <td>4007.70</td>\n",
+       "      <td>4029.80</td>\n",
+       "      <td>3985.00</td>\n",
+       "      <td>4024.05</td>\n",
+       "      <td>336972857</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-04</th>\n",
+       "      <td>4027.30</td>\n",
+       "      <td>4041.00</td>\n",
+       "      <td>3979.80</td>\n",
+       "      <td>3988.80</td>\n",
+       "      <td>369793444</td>\n",
+       "      <td>-100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-05</th>\n",
+       "      <td>3990.15</td>\n",
+       "      <td>4011.45</td>\n",
+       "      <td>3969.65</td>\n",
+       "      <td>3983.40</td>\n",
+       "      <td>363396365</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2007-01-08</th>\n",
+       "      <td>3983.30</td>\n",
+       "      <td>3987.45</td>\n",
+       "      <td>3913.00</td>\n",
+       "      <td>3933.40</td>\n",
+       "      <td>345887697</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-01</th>\n",
+       "      <td>18130.70</td>\n",
+       "      <td>18175.80</td>\n",
+       "      <td>18060.15</td>\n",
+       "      <td>18145.40</td>\n",
+       "      <td>248784199</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-02</th>\n",
+       "      <td>18177.90</td>\n",
+       "      <td>18178.75</td>\n",
+       "      <td>18048.65</td>\n",
+       "      <td>18082.85</td>\n",
+       "      <td>2053916079</td>\n",
+       "      <td>-100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-03</th>\n",
+       "      <td>17968.35</td>\n",
+       "      <td>18106.30</td>\n",
+       "      <td>17959.20</td>\n",
+       "      <td>18052.70</td>\n",
+       "      <td>250997227</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-04</th>\n",
+       "      <td>18053.40</td>\n",
+       "      <td>18135.10</td>\n",
+       "      <td>18017.15</td>\n",
+       "      <td>18117.15</td>\n",
+       "      <td>263180073</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-07</th>\n",
+       "      <td>18211.75</td>\n",
+       "      <td>18255.50</td>\n",
+       "      <td>18064.75</td>\n",
+       "      <td>18202.80</td>\n",
+       "      <td>309475221</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3855 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                open      high       low     close      volume  engulfing  \\\n",
+       "datetime                                                                    \n",
+       "2007-01-02   3966.25   4016.65   3964.95   4007.40   277443911          0   \n",
+       "2007-01-03   4007.70   4029.80   3985.00   4024.05   336972857          0   \n",
+       "2007-01-04   4027.30   4041.00   3979.80   3988.80   369793444       -100   \n",
+       "2007-01-05   3990.15   4011.45   3969.65   3983.40   363396365          0   \n",
+       "2007-01-08   3983.30   3987.45   3913.00   3933.40   345887697          0   \n",
+       "...              ...       ...       ...       ...         ...        ...   \n",
+       "2022-11-01  18130.70  18175.80  18060.15  18145.40   248784199          0   \n",
+       "2022-11-02  18177.90  18178.75  18048.65  18082.85  2053916079       -100   \n",
+       "2022-11-03  17968.35  18106.30  17959.20  18052.70   250997227          0   \n",
+       "2022-11-04  18053.40  18135.10  18017.15  18117.15   263180073          0   \n",
+       "2022-11-07  18211.75  18255.50  18064.75  18202.80   309475221          0   \n",
+       "\n",
+       "            harami  hammer  shooting_star  doji  dragonfly_dogi  \\\n",
+       "datetime                                                          \n",
+       "2007-01-02       0       0              0     0               0   \n",
+       "2007-01-03       0       0              0     0               0   \n",
+       "2007-01-04       0       0              0     0               0   \n",
+       "2007-01-05       0       0              0     0               0   \n",
+       "2007-01-08       0       0              0     0               0   \n",
+       "...            ...     ...            ...   ...             ...   \n",
+       "2022-11-01       0       0              0     0               0   \n",
+       "2022-11-02       0       0              0     0               0   \n",
+       "2022-11-03       0       0              0     0               0   \n",
+       "2022-11-04       0       0              0     0               0   \n",
+       "2022-11-07       0       0              0   100               0   \n",
+       "\n",
+       "            gravestone_dogi  \n",
+       "datetime                     \n",
+       "2007-01-02                0  \n",
+       "2007-01-03                0  \n",
+       "2007-01-04                0  \n",
+       "2007-01-05                0  \n",
+       "2007-01-08                0  \n",
+       "...                     ...  \n",
+       "2022-11-01                0  \n",
+       "2022-11-02                0  \n",
+       "2022-11-03                0  \n",
+       "2022-11-04                0  \n",
+       "2022-11-07                0  \n",
+       "\n",
+       "[3855 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern_recognition(nifty_daily_continous)"
    ]
   },
   {
