--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -1655,7 +1655,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Getting Indicators"
+    "# Getting Indicators"
    ]
   },
   {
@@ -54557,7 +54557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1 min data"
+    "# 1 min data"
    ]
   },
   {
@@ -54816,7 +54816,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Nifty Conclusion (After 1 minute adjustment)\n",
+    "### Nifty Conclusion (After 1 minute adjustment)\n",
     "Till 2009-10-22 (including)-> Trading from 09:55\n",
     "\n",
     "2009-10-23(inc) to 2009-12-31(inc) -> Trading from 09:56\n",
@@ -55533,7 +55533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
